set up the initial playground area for MP and JJ

--- a/Personal/Modals/index-two.html
+++ b/Personal/Modals/index-two.html
@@ -30,10 +30,8 @@
 		</div>
 	</div>
 	<div class="modal-cover">
-		<div class="grad one"></div>
-		<div class="grad two"></div>
-		<div class="grad three"></div>
-		<div class="grad four"></div>
+		<div class="grad six"></div>
+		<div class="grad seven"></div>
 	</div>
 
 </body>
