--- a/Personal/Modals/index-three.html
+++ b/Personal/Modals/index-three.html
@@ -17,23 +17,20 @@
 	<script type="text/javascript" src="assets/js/global.js"></script>
 
 </head>
-<body class="pict">
-
-</head>
 <body>
 
-	<div id="pagewrap">
-		<a href="#" class="open">Demo 1</a>
-		<div class="modal">
-			<h1>This is a modal</h1>
-			<p>Yay - what do you think? (he hates it)</p>
+</head>
+<body class="mix">
+
+	<div id="pagewrap" class="mix">
+		<img src="http://f.cl.ly/items/0G1c111D362i0N3a3m1q/ui-bg.png" alt="" />
+		<div class="holder">
+			<div class="modal-cover blur">
+				<div class="blurry"></div>
+			</div>
+			<a href="#" class="open">Open</a>
+			<div class="modal default"></div>
 		</div>
-	</div>
-	<div class="modal-cover">
-		<div class="grad one"></div>
-		<div class="grad two"></div>
-		<div class="grad three"></div>
-		<div class="grad four"></div>
 	</div>
 
 </body>
