added in some new styles for gobbble

--- a/Personal/Modals/index-boxes.html
+++ b/Personal/Modals/index-boxes.html
@@ -17,35 +17,47 @@
 	<script type="text/javascript" src="assets/js/global.js"></script>
 
 </head>
-<body class="pict">
+<body class="gobbble">
 
 </head>
 <body>
 
 	<div class="wrapper">
-		<ul class="boxes"><li>
+		<ul class="boxes">
+			<li class="one">
+				<img src="assets/images/food.jpg" alt="" />
 				<h2>This is a headline</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex ducimus ratione molestiae sapiente, asperiores, laborum repudiandae exercitationem id beatae veniam fugiat minus.</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="two">
+				<img src="assets/images/food.jpg" alt="" />
+				<h2>We're not there yet</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores doloremque illo voluptatibus, hic velit, aut minus enim eius officiis esse quasi officia.</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="three">
+				<img src="assets/images/food.jpg" alt="" />
+				<h2>Go home</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque totam at quo rem fuga voluptate distinctio mollitia quaerat nobis voluptatum. Dolore, maxime!</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="four">
+				<h2>This is your mom</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid amet ullam ipsum neque animi ratione voluptas ut laborum. Rerum quod numquam accusantium.</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="five bottom-half">
+				<img src="assets/images/food.jpg" alt="" />
+				<h2>This is a chicken fucker</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consequatur atque necessitatibus ut unde excepturi deserunt tenetur harum natus reiciendis. Fugit, nostrum.</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="six bottom-half">
+				<h2>This is a cunt whore</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla illum, at tempora aperiam alias pariatur eos adipisci id quibusdam architecto similique ut.</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="seven bottom-half">
+				<h2>This pussy</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis necessitatibus suscipit blanditiis eum, mollitia delectus repellat aut, quo cum, quibusdam, doloremque animi!</p>
-			</li><li>
-				<h2>This is a headline</h2>
+			</li>
+			<li class="eight bottom-half">
+				<h2>Get fucked</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus ipsam neque, aliquid, ut cupiditate earum suscipit, dolore non voluptates nemo, necessitatibus animi.</p>
 			</li>
 		</ul>
