fixed some things  in the help docs and the boxes modals

--- a/Personal/Modals/index-boxes.html
+++ b/Personal/Modals/index-boxes.html
@@ -19,9 +19,6 @@
 </head>
 <body class="gobbble">
 
-</head>
-<body>
-
 	<div class="wrapper">
 		<ul class="boxes">
 			<li class="one">
@@ -45,19 +42,19 @@
 			</li>
 			<li class="five bottom-half">
 				<img src="assets/images/food.jpg" alt="" />
-				<h2>This is a chicken fucker</h2>
+				<h2>This is a chicken</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consequatur atque necessitatibus ut unde excepturi deserunt tenetur harum natus reiciendis. Fugit, nostrum.</p>
 			</li>
 			<li class="six bottom-half">
-				<h2>This is a cunt whore</h2>
+				<h2>This is a special day</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla illum, at tempora aperiam alias pariatur eos adipisci id quibusdam architecto similique ut.</p>
 			</li>
 			<li class="seven bottom-half">
-				<h2>This pussy</h2>
+				<h2>This ux</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis necessitatibus suscipit blanditiis eum, mollitia delectus repellat aut, quo cum, quibusdam, doloremque animi!</p>
 			</li>
 			<li class="eight bottom-half">
-				<h2>Get fucked</h2>
+				<h2>Four times faster rendering</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus ipsam neque, aliquid, ut cupiditate earum suscipit, dolore non voluptates nemo, necessitatibus animi.</p>
 			</li>
 		</ul>
