finished up the jeopardy

--- a/Personal/Jeopardy/index.html
+++ b/Personal/Jeopardy/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8" />
 	<link rel="stylesheet" href="assets/css/global.css" type="text/css" media="screen" charset="utf-8" />
 
+	<script src="//use.typekit.net/wws5cng.js"></script>
+	<script>try{Typekit.load();}catch(e){}</script>
+
 	<script type="text/javascript" src="assets/js/jquery-2.1.1.min.js"></script>
 
 	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
@@ -23,10 +26,10 @@
 
 	<ul class="header">
 		<div class="col">
-			<li class="header">Nebraska Geography</li>
+			<li class="header">Famous Nebraskans</li>
 		</div>
 		<div class="col">
-			<li class="header">Famous Nebraskans</li>
+			<li class="header">Nebraska Geography</li>
 		</div>
 		<div class="col">
 			<li class="header">Nebraska Wildlife</li>
@@ -38,92 +41,242 @@
 			<li class="header">Nebraska Jeffrey</li>
 		</div>
 		<div class="col">
-			<li class="header">Miscellaneous Nebraska</li>
+			<li class="header">Misc. Nebraska</li>
 		</div>
 	</ul>
 
-	<div class="col geo">
-		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
-		</ul>
-	</div>
 	<div class="col famous">
 		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+					<p>Warren Buffet, the world’s third wealthiest man hails from this city on the Missouri, Nebraska’s largest by population.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+						<p>This co-founder of Twitter and Silicon Valley CEO whose name is synonymous with success grew up 90 miles south of Nebraska’s capital city, Lincoln.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+						<p>Daniel Hirschfeld, the CEO and Founder of this popular clothing brand started the company in a garage in Kearney where the warehouse and main shipping facilities still reside.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+						<p>From 1974 - 1998 this man coached the Nebraska Cornhuskers to 3 national championships. Afterward, he served as a Nebraska Senator for 2 consecutive terms. </p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+						<p>Blacklist, the hit show on ABC starring this actor is written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
+					<span>X</span>
+				</figure>
+			</li>
+		</ul>
+	</div>
+	<div class="col geography">
+		<ul class="answers">
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+					<p>This, the longest river in the United States carves out the entire eastern border of Nebraska.Rivers</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+						<p>No other state in the Union has more miles of these large bodies of flowing water.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+						<p>Six states border Nebraska; Iowa, Missouri, Kansas, Colorado, Wyoming, and this state to the north.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+						<p>Named after the vertical channel that conducts smoke through a rooftop, this rock was the most talked about location along the Oregon Trail.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
 		</ul>
 	</div>
 	<div class="col wildlife">
 		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+					<p>It’s no surprise Alpacas and Llamas are popular ‘livestock’ in Nebraska. More fossils of this water-storing ancestor have been found in Nebraska than anywhere else in the world. </p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+						<p>These birds migrate to Nebraska every year on their way south, and are the most watched bird in the United States.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
 		</ul>
 	</div>
 	<div class="col cities">
 		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
 		</ul>
 	</div>
 	<div class="col me">
 		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+					<p>This beloved meat is canned at a warehouse in Fremont, Nebraska.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+					<p>Oh-Yeah! This sugar-filled fruit drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+					<p>Though Nebraska produces more of this product than any other state in the US, roughly only 1% of the gross amount harvested is consumed by humans.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+					<p>Known across the world, Nebraska ranks in the top 5% worldwide for this animal export.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
 		</ul>
 	</div>
 	<div class="col misc">
 		<ul class="answers">
-			<li class="amount">2 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">4 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">6 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">8 Drinks</li>
-			<li class="answer"></li>
-			<li class="amount">10 Drinks</li>
-			<li class="answer"></li>
+			<li class="amount">
+				<p>2</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>4</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>6</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>8</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>10</p>
+				<figure class="answer">
+
+					<span>X</span>
+				</figure>
+			</li>
 		</ul>
 	</div>
 	<div class="clearfloat"></div>
