readied things for the work comp

--- a/Personal/Jeopardy/index.html
+++ b/Personal/Jeopardy/index.html
@@ -35,10 +35,10 @@
 			<li class="header">Nebraska Wildlife</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Cities</li>
+			<li class="header">Nebraska Jeff</li>
 		</div>
 		<div class="col">
-			<li class="header">Nebraska Jeffrey</li>
+			<li class="header">Nebraska Companies</li>
 		</div>
 		<div class="col">
 			<li class="header">Misc. Nebraska</li>
@@ -48,37 +48,37 @@
 	<div class="col famous">
 		<ul class="answers">
 			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>Warren Buffet, the world’s third wealthiest man hails from this city on the Missouri River, Nebraska’s largest.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-					<p>Warren Buffet, the world’s third wealthiest man hails from this city on the Missouri, Nebraska’s largest by population.</p>
+					<p>This Twitter co-founder and startup guru grew up in a small town 90 miles south of Lincoln, Nebraska’s capital city.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>3</p>
+				<figure class="answer">
+					<p>This man was born and raised in Omaha long before becoming 'The Godfather' of film.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>4</p>
 				<figure class="answer">
-						<p>This co-founder of Twitter and Silicon Valley CEO whose name is synonymous with success grew up 90 miles south of Nebraska’s capital city, Lincoln.</p>
+					<p>From 1974 - 1998 this man coached the Nebraska Cornhuskers to 3 national championships. Afterward, he served as a Nebraska Senator for 2 consecutive terms. </p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>6</p>
+				<p>5</p>
 				<figure class="answer">
-						<p>Daniel Hirschfeld, the CEO and Founder of this popular clothing brand started the company in a garage in Kearney where the warehouse and main shipping facilities still reside.</p>
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>8</p>
-				<figure class="answer">
-						<p>From 1974 - 1998 this man coached the Nebraska Cornhuskers to 3 national championships. Afterward, he served as a Nebraska Senator for 2 consecutive terms. </p>
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>10</p>
-				<figure class="answer">
-						<p>Blacklist, the hit show on ABC starring this actor is written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
+					<p>Blacklist, the hit show on ABC starring this actor is written and produced by Jon Bokenkamp, the older brother of a close friend of mine.</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -87,37 +87,37 @@
 	<div class="col geography">
 		<ul class="answers">
 			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>This, the longest river in the United States carves out the entire eastern border of Nebraska.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-					<p>This, the longest river in the United States carves out the entire eastern border of Nebraska.Rivers</p>
+						<p>No other state in the U.S. has more miles of these large bodies of flowing water.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
-				<figure class="answer">
-						<p>No other state in the Union has more miles of these large bodies of flowing water.</p>
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>6</p>
+				<p>3</p>
 				<figure class="answer">
 						<p>Six states border Nebraska; Iowa, Missouri, Kansas, Colorado, Wyoming, and this state to the north.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>8</p>
+				<p>4</p>
 				<figure class="answer">
-						<p>Named after the vertical channel that conducts smoke through a rooftop, this rock was the most talked about location along the Oregon Trail.</p>
+					<p>Located just on the outskirts of town, the aptly named 1733 Estates is 1,733 miles away from these two U.S. cities.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>10</p>
+				<p>5</p>
 				<figure class="answer">
-
+					<p>Named after the vertical channel that conducts smoke through a rooftop, this rock was the most talked about location along the Oregon Trail.</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -126,115 +126,115 @@
 	<div class="col wildlife">
 		<ul class="answers">
 			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>Nebraska's state bug is this winged insect, said to be one of the most important to sustaining life in nature.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-
+					<p>Though more frequently found in Siberia, Nebraska is home to the largest fossil ever found of these paleolithic mammoths.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>4</p>
-				<figure class="answer">
-
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>6</p>
+				<p>3</p>
 				<figure class="answer">
 					<p>It’s no surprise Alpacas and Llamas are popular ‘livestock’ in Nebraska. More fossils of this water-storing ancestor have been found in Nebraska than anywhere else in the world. </p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>8</p>
+				<p>4</p>
 				<figure class="answer">
 						<p>These birds migrate to Nebraska every year on their way south, and are the most watched bird in the United States.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>10</p>
+				<p>5</p>
 				<figure class="answer">
-
+					<p>Nebraska is considered one of the top three places in the United States to fish for this wildly popular sport species.</p>
 					<span>X</span>
 				</figure>
 			</li>
 		</ul>
 	</div>
-	<div class="col cities">
+	<div class="col jeff">
 		<ul class="answers">
+			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>Ballet, ran a marathon, visited Rwanda, played semi-professional soccer.</p>
+					<span>X</span>
+				</figure>
+			</li>
 			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-
+					<p>Purple, green, red, orange, blue, and bald.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>3</p>
+				<figure class="answer">
+					<p>Trespassing on a fish hatchery, partying in a private quonset, minor in possession of alcohol.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>4</p>
 				<figure class="answer">
-
+					<p>Pizza Hut, Papa Johns, Dominos, Little Caesars.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>6</p>
+				<p>5</p>
 				<figure class="answer">
-
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>8</p>
-				<figure class="answer">
-
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>10</p>
-				<figure class="answer">
-
+					Psychology, English, photography.
 					<span>X</span>
 				</figure>
 			</li>
 		</ul>
 	</div>
-	<div class="col me">
+	<div class="col companies">
 		<ul class="answers">
+			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>On August 14th, 2014, the cost per 'A' share of this company hit $200,000.</p>
+					<span>X</span>
+				</figure>
+			</li>
 			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-					<p>This beloved meat is canned at a warehouse in Fremont, Nebraska.</p>
+					<p>Oh-Yeah! This fruity	 soft drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>3</p>
+				<figure class="answer">
+					<p>Daniel Hirschfeld, the CEO and Founder of this popular clothing brand started the company in a garage in Kearney where the warehouse and main shipping facilities still reside.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>4</p>
 				<figure class="answer">
-					<p>Oh-Yeah! This sugar-filled fruit drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<p>In 2012 Nebraska ranked No. 1 in the U.S. in beef production, of which this company's mail-order service accounted for nearly 30%.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>6</p>
+				<p>5</p>
 				<figure class="answer">
-					<p>Though Nebraska produces more of this product than any other state in the US, roughly only 1% of the gross amount harvested is consumed by humans.</p>
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>8</p>
-				<figure class="answer">
-					<p>Known across the world, Nebraska ranks in the top 5% worldwide for this animal export.</p>
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>10</p>
-				<figure class="answer">
-
+					<p>Slim Jim, Parkay, Jiffy Pop, Egg Beaters, Healthy Choice and Chef Boyardee are just a few of this Fortune 500 holding company's 100+ brands.</p>
 					<span>X</span>
 				</figure>
 			</li>
@@ -243,37 +243,37 @@
 	<div class="col misc">
 		<ul class="answers">
 			<li class="amount">
+				<p>1</p>
+				<figure class="answer">
+					<p>This beloved meat is canned at a warehouse in Fremont, Nebraska.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
 				<p>2</p>
 				<figure class="answer">
-
+					<p>Oh-Yeah! This sugar-filled fruit drink was created in Hastings, Nebraska, about 30 minutes from where I grew up.</p>
+					<span>X</span>
+				</figure>
+			</li>
+			<li class="amount">
+				<p>3</p>
+				<figure class="answer">
+					<p>Though Nebraska produces more of this product than any other state in the US, roughly only 1% of the gross amount harvested is consumed by humans.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
 				<p>4</p>
 				<figure class="answer">
-
+					<p>In 1986, Nebraska became the first state to have a gubernatorial election where both major party candidates were this.</p>
 					<span>X</span>
 				</figure>
 			</li>
 			<li class="amount">
-				<p>6</p>
+				<p>5</p>
 				<figure class="answer">
-
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>8</p>
-				<figure class="answer">
-
-					<span>X</span>
-				</figure>
-			</li>
-			<li class="amount">
-				<p>10</p>
-				<figure class="answer">
-
+					<p>David Letterman's Top 10 came from the home office in this Nebraska city (also the birthplace of my grandmother).</p>
 					<span>X</span>
 				</figure>
 			</li>
