added in some additional stuff into the formula and custom event deletion fil

--- a/Mixpanel/Custom Events/index2.html
+++ b/Mixpanel/Custom Events/index2.html
@@ -17,8 +17,10 @@
 
 	<div id="pagewrap">
 		<div class="widget">
+			<div class="x cover one"><img src="https://dl.dropboxusercontent.com/u/44421066/dev_images/x2.png" alt="" /></div>
+			<div class="x cover two"><img src="https://dl.dropboxusercontent.com/u/44421066/dev_images/x2.png" alt="" /></div>
 			<div class="cover"></div>
-			<div class="links">
+			<div class="links two">
 				<div class="input">
 					<input type="text" name="" class="name" value="Decided in Chrome in San Francisco">
 					<input type="submit" class="submit">
