got the drawer workign to an extent

--- a/Mixpanel/New UI/index.html
+++ b/Mixpanel/New UI/index.html
@@ -25,9 +25,31 @@
 
 		<div class="wrapper">
 
-			<nav>
-				<div class="drawer"></div>
-			</nav>
+			<div class="reports">
+				<p>This is the report stuff, homie. It's uber legit. Deal with it.</p>
+			</div>
+
+			<aside>
+				<div class="drawer">
+					<nav>
+						<h4>Engagement</h4>
+						<a href="#">Funnels</a>
+						<a href="#">Segmentation</a>
+						<a href="#">Retention</a>
+						<a href="#">Formulas</a>
+						<a href="#">Live View</a>
+						<a href="#">Bookmarks</a>
+						<a href="#">A/B Testing</a>
+						<span class="sep"></span>
+						<h4>People</h4>
+						<a href="#">Explore</a>
+						<a href="#">Insight</a>
+						<a href="#">Notifications</a>
+						<a href="#">Surveys</a>
+						<a href="#">Revenue</a>
+					</nav>
+				</div>
+			</aside>
 
 			<header>
 				<div class="avatar"></div>
