--- a/Mixpanel/New UI/index.html
+++ b/Mixpanel/New UI/index.html
@@ -26,30 +26,34 @@
 		<div class="wrapper">
 
 			<div class="reports">
-				<p>This is the report stuff, homie. It's uber legit. Deal with it.</p>
+				<div class="content">
+					<p>This is the report stuff, homie. It's uber legit. Deal with it.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo ipsum quae cupiditate delectus molestias deleniti, deserunt saepe tempore quisquam molestiae aliquid unde, officiis voluptates accusantium.</p>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit inventore commodi consequuntur quisquam quidem ut ab iusto aliquid harum dolorem, libero, facere debitis delectus eligendi, veniam dolores architecto. Exercitationem cupiditate sunt itaque sit. Nostrum accusamus, tempore ad voluptas. Suscipit quasi totam veniam nulla repellat. Voluptate voluptates, temporibus illo quae possimus? Natus inventore illum aliquam dolores. Consectetur error nostrum sint repudiandae distinctio nemo labore fuga repellendus deleniti quia blanditiis, dolore itaque autem cumque nobis possimus repellat doloremque delectus. Veritatis optio eum doloribus similique sint, eaque nemo architecto, quasi tenetur, omnis at laborum labore. Ipsa, fuga delectus quod consequuntur aut, eligendi vel. Doloribus consequuntur unde facilis in nam totam modi, quasi ex fugit possimus sit earum deleniti enim reiciendis veritatis temporibus, voluptatibus debitis. Exercitationem deserunt commodi quod, libero maxime voluptatum cupiditate mollitia consequatur quia odit dolore facere harum. Quidem ad dolor non culpa in voluptatum cupiditate quasi deleniti doloremque ullam animi debitis fugit consequuntur quibusdam placeat a, vel nisi tempora, dolore iste sequi voluptatem? Ab similique, numquam ipsam enim eius eligendi sint officia accusamus dignissimos, repudiandae officiis ipsum consequuntur perspiciatis ea cupiditate totam id excepturi dolorem blanditiis iure dolores, voluptates libero corporis sapiente. Provident laborum voluptatibus, beatae, reprehenderit ullam nesciunt ex recusandae rerum veniam harum hic est molestias excepturi ea consequatur officiis accusamus vitae, eaque quos modi quibusdam illo voluptatem adipisci nihil. Quae, fugiat, et. Inventore temporibus debitis libero alias maiores a laborum eos ducimus? Aspernatur nisi quaerat perferendis minima rem dolores inventore possimus omnis id maiores magni facere non, tempora neque eum quia magnam fugit suscipit doloribus praesentium vitae a consequatur tempore! Sunt nobis harum laborum atque voluptatibus eius qui porro rerum non commodi, incidunt nulla quibusdam magni, aut sequi earum quos dicta inventore quaerat perferendis pariatur. Et cumque, veritatis iure quidem esse, incidunt commodi, veniam natus ipsa voluptatibus molestias, porro voluptatum. Quo aspernatur voluptatem sit velit adipisci quidem nihil, ut, deserunt beatae officiis pariatur ab unde atque mollitia! Sit perferendis velit nam, totam provident distinctio nobis iste, ducimus dicta!</p>
+				</div>
 			</div>
 
-			<aside>
-				<div class="drawer">
-					<nav>
-						<h4>Engagement</h4>
-						<a href="#">Funnels</a>
-						<a href="#">Segmentation</a>
-						<a href="#">Retention</a>
-						<a href="#">Formulas</a>
-						<a href="#">Live View</a>
-						<a href="#">Bookmarks</a>
-						<a href="#">A/B Testing</a>
-						<span class="sep"></span>
-						<h4>People</h4>
-						<a href="#">Explore</a>
-						<a href="#">Insight</a>
-						<a href="#">Notifications</a>
-						<a href="#">Surveys</a>
-						<a href="#">Revenue</a>
-					</nav>
-				</div>
+
+			<aside class="drawer">
+				<nav>
+					<h4>Engagement</h4>
+					<a href="#">Funnels</a>
+					<a href="#">Segmentation</a>
+					<a href="#">Retention</a>
+					<a href="#">Formulas</a>
+					<a href="#">Live View</a>
+					<a href="#">Bookmarks</a>
+					<a href="#">A/B Testing</a>
+					<span class="sep"></span>
+					<h4>People</h4>
+					<a href="#">Explore</a>
+					<a href="#">Insight</a>
+					<a href="#">Notifications</a>
+					<a href="#">Surveys</a>
+					<a href="#">Revenue</a>
+				</nav>
 			</aside>
+
 
 			<header>
 				<div class="avatar"></div>
