--- a/Mixpanel/New UI/index.html
+++ b/Mixpanel/New UI/index.html
@@ -8,8 +8,10 @@
 
 	<link rel="stylesheet" href="assets/css/global.css" type="text/css" media="screen" charset="utf-8" />
 
-	<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-	<script type="text/javascript">google.load("jquery", "1.6.2");</script>
+	<!-- <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+	<script type="text/javascript">google.load("jquery", "1.6.2");</script> -->
+
+	<script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
 
 	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.cycle.all.js"></script>
@@ -33,27 +35,33 @@
 				</div>
 			</div>
 
-
 			<aside class="drawer">
 				<nav>
 					<h4>Engagement</h4>
-					<a href="#">Funnels</a>
 					<a href="#">Segmentation</a>
+					<a href="#">Funnels</a>
 					<a href="#">Retention</a>
 					<a href="#">Formulas</a>
-					<a href="#">Live View</a>
-					<a href="#">Bookmarks</a>
 					<a href="#">A/B Testing</a>
 					<span class="sep"></span>
 					<h4>People</h4>
 					<a href="#">Explore</a>
-					<a href="#">Insight</a>
 					<a href="#">Notifications</a>
 					<a href="#">Surveys</a>
 					<a href="#">Revenue</a>
 				</nav>
+				<figure class="arrow"></figure>
 			</aside>
 
+			<div class="project_menu">
+				<menu>
+					<a href="#">This is a project</a>
+					<a href="#">This is a project</a>
+					<a href="#">This is a project</a>
+					<a href="#">This is a project</a>
+					<a href="#">This is a project</a>
+				</menu>
+			</div>
 
 			<header>
 				<div class="avatar"></div>
