--- a/Mixpanel/Mobile App/index.html
+++ b/Mixpanel/Mobile App/index.html
@@ -7,18 +7,17 @@
 	<title>Mixpanel</title>
 
 	<link rel="stylesheet" href="assets/css/global.css" type="text/css" media="screen" charset="utf-8" />
-
-	<!-- <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-	<script type="text/javascript">google.load("jquery", "1.6.2");</script> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimal-ui">
 
 	<script type="text/javascript" src="assets/js/jquery-2.1.3.min.js"></script>
 
+	<script type="text/javascript" src="assets/js/is.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.cycle.all.js"></script>
 
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 	<script src="//use.typekit.net/gtv6egv.js"></script>
-	<script>try{Typekit.load();}catch(e){}</script>
+	<script>try{Typekit.load();}catch(e){}</script>-->
 
 	<script type="text/javascript" src="assets/js/global.js"></script>
 
@@ -27,20 +26,41 @@
 
 	<div class="phone-wrap">
 
-		<div class="header hidden">
-
-		</div>
-		<div class="statusbar black"></div>
-
-		<!-- HOME LOGIN SCREEN -->
 		<div class="home">
-			<img src="assets/img/intro-logo.png" alt="" class="logo">
-			<form action="#">
-				<input type="text" placeholder="Email address">
-				<div class="sep"></div>
-				<input type="text" placeholder="Password">
-			</form>
-			<button class="button">Login</button>
+
+			<!-- LOGIN -->
+			<div class="login_form">
+				<img src="assets/img/intro-logo.png" alt="" class="logo">
+				<form data-parsley-validate>
+					<div class="email">
+						<input type="email" class="email_field" placeholder="Email address" data-parsley-trigger="change" required>
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="38" height="28" viewBox="0 0 38 28">
+						  <path d="M37.870,3.044 C37.870,3.044 37.438,3.380 37.438,3.380 C37.438,3.380 37.438,26.000 37.438,26.000 C37.438,27.105 36.542,28.000 35.437,28.000 C35.437,28.000 2.438,28.000 2.438,28.000 C1.333,28.000 0.438,27.105 0.438,26.000 C0.438,26.000 0.438,3.380 0.438,3.380 C0.438,3.380 0.005,3.044 0.005,3.044 C0.005,3.044 0.438,2.471 0.438,2.471 C0.438,2.471 0.438,2.000 0.438,2.000 C0.438,0.895 1.333,0.000 2.438,0.000 C2.438,0.000 35.437,0.000 35.437,0.000 C36.542,0.000 37.438,0.895 37.438,2.000 C37.438,2.000 37.438,2.471 37.438,2.471 C37.438,2.471 37.870,3.044 37.870,3.044 ZM3.437,24.000 C3.437,24.552 3.885,25.000 4.438,25.000 C4.438,25.000 33.437,25.000 33.437,25.000 C33.990,25.000 34.438,24.552 34.438,24.000 C34.438,24.000 34.438,5.710 34.438,5.710 C34.438,5.710 19.335,17.439 19.335,17.439 C19.335,17.439 18.938,16.911 18.938,16.911 C18.938,16.911 18.540,17.439 18.540,17.439 C18.540,17.439 3.437,5.710 3.437,5.710 C3.437,5.710 3.437,24.000 3.437,24.000 ZM18.938,13.809 C18.938,13.809 32.856,3.000 32.856,3.000 C32.856,3.000 5.019,3.000 5.019,3.000 C5.019,3.000 18.938,13.809 18.938,13.809 Z" id="path-1" class="cls-2" fill-rule="evenodd"/>
+						</svg>
+					</div>
+					<div class="sep"></div>
+					<div class="pass">
+						<input type="password" class="pass_field" placeholder="Password" data-parsley-mincheck="6" data-parsley-trigger="change" required>
+						<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid" width="35" height="40" viewBox="0 0 35 40">
+						  <path d="M33.000,40.000 C33.000,40.000 2.000,40.000 2.000,40.000 C0.895,40.000 -0.000,39.105 -0.000,38.000 C-0.000,38.000 -0.000,16.000 -0.000,16.000 C-0.000,14.895 0.895,14.000 2.000,14.000 C2.000,14.000 6.000,14.000 6.000,14.000 C6.000,14.000 6.000,11.000 6.000,11.000 C6.000,4.925 10.925,-0.000 17.000,-0.000 C17.000,-0.000 18.000,-0.000 18.000,-0.000 C24.075,-0.000 29.000,4.925 29.000,11.000 C29.000,11.000 29.000,14.000 29.000,14.000 C29.000,14.000 33.000,14.000 33.000,14.000 C34.105,14.000 35.000,14.895 35.000,16.000 C35.000,16.000 35.000,38.000 35.000,38.000 C35.000,39.105 34.105,40.000 33.000,40.000 ZM25.986,11.077 C25.986,6.659 22.404,3.077 17.986,3.077 C17.986,3.077 17.014,3.077 17.014,3.077 C12.596,3.077 9.014,6.659 9.014,11.077 C9.014,11.077 9.014,14.000 9.014,14.000 C9.014,14.000 25.986,14.000 25.986,14.000 C25.986,14.000 25.986,11.077 25.986,11.077 ZM32.000,18.000 C32.000,17.448 31.552,17.000 31.000,17.000 C31.000,17.000 4.000,17.000 4.000,17.000 C3.448,17.000 3.000,17.448 3.000,18.000 C3.000,18.000 3.000,36.000 3.000,36.000 C3.000,36.552 3.448,37.000 4.000,37.000 C4.000,37.000 31.000,37.000 31.000,37.000 C31.552,37.000 32.000,36.552 32.000,36.000 C32.000,36.000 32.000,18.000 32.000,18.000 Z" id="path-1" class="cls-2" fill-rule="evenodd"/>
+						</svg>
+					</div>
+					<button class="button sign-in">Sign in</button>
+				</form>
+			</div>
+
+			<!-- Two Factor -->
+			<div class="two_factor_form">
+				<img src="assets/img/icon.png" alt="" class="icon">
+				<p><span>We sent a text message with your security code to: </span>+1 602-317-****</p>
+				<form data-parsley-validate>
+					<div class="verification">
+						<input type="text" class="verification_field" placeholder="Enter your verification code" data-parsley-trigger="change" required>
+					</div>
+					<div class="sep"></div>
+					<button class="button verify">Verify</button>
+				</form>
+			</div>
 		</div>
 
 	</div>
